--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "antd": "^4.9.4",
+    "axios": "^0.21.1",
+    "firebase": "^8.2.1",
+    "javascript-time-ago": "^2.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-image-file-resizer": "^0.3.9",
+    "react-quill": "^1.3.5",
+    "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.11",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-star-ratings": "^2.3.0",
+    "react-toastify": "^6.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
